@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+  * Add ExtremeXOS phrases courtesy those nice PacketFence people.
+
 2.103640  2010-12-30 19:47:36 Europe/London
 
   * Port to Dist::Zilla
